--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 :root {
     --background: lightblue;
+    --red: tomato;
+    --orange: orange;
+    --yellow: gold;
+    --green: mediumseagreen;
+    --blue: dodgerblue;
+    --purple: slateblue;
+    --gray: darkgray;
 }
 
 html {
@@ -12,16 +19,13 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
     text-align: center;
 }
 
-.album_years {
-    height: 300px;
-}
-
-.album_years_chart {
-    width: 50%;
+.years {
+    height: 450px;
 }
 
 .num_songs {
@@ -49,8 +53,15 @@ h2 {
 }
 
 .artist_chart {
-    height: 1200px;
-    width: 100%;
+    height: 800px;
+}
+
+.media_chart {
+    height: 800px;
+}
+
+.stats_chart {
+    height: 300px;
 }
 
 .container {
@@ -61,7 +72,20 @@ h2 {
     width: 25%;
     padding-left: 12%;
 }
-.stats table{
+
+.songChartStats table {
+    margin: 0 auto;
+}
+
+.albums_stats table {
+    margin: 0 auto;
+}
+
+.pieChart div {
+    margin: 0 auto;
+}
+
+.songs_stats_stats table {
     margin: 0 auto;
 }
 
@@ -78,10 +102,11 @@ img {
     gap: 3px;
 }
 
-table{
+table {
     border-spacing: 0;
     border-collapse: collapse;
 }
+
 .chartStats table {
     float: right;
 }
@@ -108,14 +133,14 @@ th {
     margin: 0;
     padding: 0;
     border: 5px solid black;
+    margin-bottom: 3px;
 }
 
 .tabs li a {
     padding: 10px 20px;
     display: block;
     text-decoration: none;
-    color: white;
-    background: black;
+    color: black;
 }
 
 .tabs li.active a {
@@ -124,5 +149,77 @@ th {
 }
 
 .active {
+    display: block;
+}
+
+.pop {
+    background: var(--blue)
+}
+
+.film {
+    background: var(--red)
+}
+
+.vgm {
+    background: var(--green)
+}
+
+.tv {
+    background: var(--yellow)
+}
+
+.covers {
+    background: var(--purple)
+}
+
+.other {
+    background: var(--gray)
+}
+
+.combined {
+    background: var(--orange)
+}
+
+.containey {
+    position: relative;
+    width: 128px;
+}
+
+.image {
+    width: 100%;
+    height: auto;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.containey:hover .overlay {
+    opacity: 1;
+}
+
+.width {
+    width: 100%;
+}
+
+.songDisplay {
+    height: 200px;
+    border: 5px solid black;
+}
+
+button {
+    margin:0 auto;
     display: block;
 }
